# quoridor-project

./: Cargo.toml  README.md  code-structure.json  run_local_tournament.sh  structure.py
.github/workflows/: deploy.yml
analysis/: analyze_tournament.py
analysis_outputs/rust_tournament_results_20250330_123159/Nash Equilibria/: nash_equilibria.json
analysis_outputs/rust_tournament_results_20250330_171002/Nash Equilibria/: nash_equilibria.json
analysis_outputs/rust_tournament_results_20250331_141425/Nash Equilibria/: nash_equilibria.json
quoridor-cli/: Cargo.toml
quoridor-cli/src/: main.rs
quoridor-core/: Cargo.toml
quoridor-core/src/: game.rs  graph.rs  lib.rs  openings.rs  player.rs  types.rs  utils.rs
quoridor-core/src/strategy/: adaptive.rs  balanced.rs  base.rs  defensive.rs  mcts.rs  minimax.rs  mirror.rs  mod.rs  random.rs  shortest_path.rs  simulated_annealing.rs
quoridor-wasm/: Cargo.toml
quoridor-wasm/src/: lib.rs  utils.rs
tournament_outputs/: rust_tournament_results_20250330_123159.csv  rust_tournament_results_20250330_171002.csv  rust_tournament_results_20250330_171755.csv  rust_tournament_results_20250331_141425.csv
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-ui/src/: App.jsx  main.jsx
web-ui/src/components/: Controls.jsx  History.jsx  QuoridorBoard.jsx  QuoridorGame.jsx
web-ui/src/hooks/: useQuoridorWasm.js
