# --- File: quoridor-project/quoridor-cli/Cargo.toml ---

[package]
name = "quoridor-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tournament runner for the Quoridor game"
license = "MIT OR Apache-2.0" # Match core license or remove

[[bin]] # Explicitly define the binary target
name = "quoridor-cli"
path = "src/main.rs"

[dependencies]
# Dependency on the core game logic crate
quoridor-core = { path = "../quoridor-core" }
chrono = "0.4"
indicatif = "0.17.3"

# For writing tournament results to CSV
csv = "1.3.0" # Use a specific recent version

# For potential command-line argument parsing (optional for now)
# clap = { version = "4.4", features = ["derive"], optional = true }

# For random selection if needed (e.g., shuffling matches)
rand = "0.8.5"

# Optional: For easier parallel processing
# rayon = "1.8"